# server-solved-sudoku

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  WORKSPACE  build.sh  query.sh  refresh.sh
client/: Cargo.toml
client_ai/: Cargo.toml
client_tui/: Cargo.toml
clients/client_ai/: Cargo.toml
clients/client_tui/: Cargo.toml
cpp/server/: README.md
cpp/server/src/: BUILD  data_models.hpp  solver.cpp  solver.hpp
csharp/: csharp.sln
csharp/models/: Option.cs  Options.cs  block.cs  board.cs  cell.cs
csharp/solver/: Class1.cs
fsharp/: fsharp.sln
fsharp/solver/: Library.fs  cell.fs  solver.fsproj
libs/: Cargo.toml  README.md  build.rs
libs/protobuf/: BUILD  game.proto  generator.proto  resolver.proto  sudoku_matrix.proto  trainer.proto
libs/src/: lib.rs  models.rs
libs/src/models/: block.rs  board.rs  cell.rs  mod.rs
micro-services/: .env  .env.sh  .gitignore  2024-07-17 164640 root@68e4ece6d43c.txt  README.md  docker-compose.yml  make-service.sh  make_env.sh
micro-services/game/: Cargo.toml  README.md
micro-services/generator/: Cargo.toml  README.md
micro-services/oauth_relay_service/: Cargo.toml  Dockerfile  README.md  sequence_flow.puml  sequence_flow_failed.puml  test_client_auth.sh  verify-kafka.sh
micro-services/oauth_relay_service/src/: config.rs  data.rs  kafka.rs  main.rs  messenger.rs  postgres.rs  redis.rs  sqlite.rs  storage.rs  storage_postgres.rs  storage_redis.rs  storage_sqlite.rs  tcp_handler.rs  web.rs
micro-services/oauth_relay_service/src/messenger/: kafka.rs
micro-services/oauth_relay_service/src/postgres/: main_postgres.rs  storage_postgres.rs  tcp_handler_postgres.rs
micro-services/oauth_relay_service/src/redis/: data_redis.rs  main_redis.rs  storage_redis.rs  tcp_handler_redis.rs
micro-services/oauth_relay_service/src/sqlite/: data_sqlite.rs  handlers_sqlite.rs  main_sqlite.rs  storage_sqlite.rs  tcp_handler_sqlite.rs
micro-services/oauth_relay_service/src/storage/: sqlite.rs
micro-services/oauth_relay_service/src/storage/sqlite/: data_sqlite.rs  main_sqlite.rs  storage_sqlite.rs
micro-services/oauth_relay_service/src/web/: actix.rs  web_consts.rs
micro-services/oauth_relay_service/src/web/actix/: keepalive.rs  login.rs
micro-services/resolver/: Cargo.toml  README.md
micro-services/trainer/: Cargo.toml  README.md
protobuf/: BUILD  generate.sh  route.proto
prototypes/test-actix_web-typescript-oauth/: .gitignore  Cargo.toml  build.js  build.sh  index.html  package-lock.json  package.json  script.ts
prototypes/test-actix_web-typescript-oauth/src/: main.rs
server/: Cargo.toml
