[workspace]
    resolver = "2"
    members = [
        "libs",
        "clients/client_tui", 
        "clients/client_ai", 
        "micro-services/generator", 
        "micro-services/resolver", 
        "micro-services/game", 
        "micro-services/trainer", 
        "micro-services/oauth_relay_service", 
        "prototypes/test-actix_web-typescript-oauth",
    ]
