[package]
name = "libs"
version = "0.1.0"
authors = ["Hideki A. Ikeda <hidekiai@CodeMonkeyNinja.com>"]
edition = "2018"

members = [
    "models/*"
]

[build-dependencies]
tonic-build = "0.11.0"

[dependencies]
tonic = "0.11.0"
prost = "0.12.6"
tokio = { version = "1.38.0", features = ["full", "macros", "rt-multi-thread"] }

