[package]
name = "libscsudoku"
version = "0.1.0"
authors = ["Hideki A. Ikeda <hidekiai@CodeMonkeyNinja.com>"]
edition = "2018"

[build-dependencies]
tonic-build = "0.12.0"

[dependencies]
tonic = "0.12.0"
prost = "0.13.1"
tokio = { version = "1.38.0", features = ["full", "macros", "rt-multi-thread"] }
anyhow = "1.0.86"

