[package]
name = "oauth_relay_service"
version = "0.1.0"
edition = "2021"
authors = ["Hideki A. Ikeda <hidekiai@CodeMonkeyNinja.com>"]

[dependencies]
libscsudoku = { path = "../../libs" }
actix-web = "4.8.0"
reqwest = { version = "0.12.5", features = ["json"] }
tokio = { version = "1.38.0", features = ["full", "macros", "time", "tokio-macros", "io-util", "io-std"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
dotenv = "0.15.0"
rusqlite = "0.31.0"
tokio-postgres = "0.7.10"
redis = { version = "0.25.4", features = ["tokio-comp"] }