[package]
name = "oauth_relay_service"
version = "0.1.0"
edition = "2021"
authors = ["Hideki A. Ikeda <hidekiai@CodeMonkeyNinja.com>"]

[dependencies]
libscsudoku = { path = "../../libs" }
actix-web = { version = "4.8.0", features = ["openssl"] }
reqwest = { version = "^0.12.5", features = ["json", "gzip", "stream", "socks"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
dotenv = "0.15.0"
tokio-rusqlite = "0.5.1"
anyhow = "1.0.86"
rand = "0.8.5"
tokio = { version = "1.38.0", features = ["full", "macros", "tokio-macros", "io-std", "io-util"] }
serde_urlencoded = "0.7.1"
actix-rt = "2.10.0"
actix-session = "0.9.0"
oauth2 = { version = "4.4.2", features = ["reqwest"] }
futures = "0.3.30"
base64 = "0.22.1"
dns-lookup = "2.0.4"
rdkafka = { version = "0.36.2", features = ["cmake-build", "dynamic-linking"] }