[package]
name = "actix_web-typescript-oauth"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6.6"
actix-web = "4.8.0"
dotenvy = { version = "0.15.7", features = ["cli"] }
dotenvy_macro = "0.15.7"
reqwest = "0.12.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
serde_urlencoded = "0.7.1"
